<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TechtrishnaBeta2</string>
    <string name="action_settings">Settings</string>
    <string name="hello">hello</string>
    <string name="myStr">Enter your query here</string>
    <string name="qStr">SUBMIT QUERY</string>
    <string name="random1">Day 1</string>
    <string name="random2">Day 2</string>
    <string name="email">Enter your email Id</string>
    <string name="query">Enter your query</string>
    <string name="submit">SUBMIT</string>
    <string name="queryText">My query is</string>
    <string name="queryWeb">related to the app or the website</string>
    <string name="queryOnline">related to the online events</string>
    <string name="queryOnsite">related to onsite events</string>
    <string name="queryOther">of a different topic</string>

    <!-- string array to store list items -->
    <string-array name="listItems">
        <item>News Feed</item>
        <item>Events</item>
        <item>Schedule</item>
        <item>Register</item>
        <item>Contact Us</item>
        <item>Navigation</item>
        <item>FAQ\'s</item>
        <item>Query Us</item>
        <item>Get TT-ID</item>
    </string-array>

    <!-- array to store icons of list -->
    <array name="listIcons">
        <item>@drawable/schedule2</item>
        <item>@drawable/events</item>
        <item>@drawable/schedule</item>
        <item>@drawable/register</item>
        <item>@drawable/contact</item>
        <item>@drawable/navigation</item>
        <item>@drawable/faq</item>
        <item>@drawable/queryus</item>
        <item>@drawable/getttid</item>
    </array>

    <!-- string array to store types of events -->
    <string-array name="eventCategory">
        <item>Online Events</item>
        <item>Computer Science</item>
        <item>Electronics and Communication</item>
        <item>Robotics</item>
    </string-array>

    <!-- online events -->
    <string-array name="onEvents">
        <item>Brackets</item>
        <item>Code Conundrum</item>
        <item>Goel aur Chotu Ka Game</item>
        <item>PhotoWeb</item>
        <item>Reiches</item>
    </string-array>

    <!-- computer science events -->
    <string-array name="csEvents">
        <item>Fastest Fingers First</item>
        <item>Fake It To Make It</item>

        <!-- ec events -->
    </string-array>
    <string-array name="ecEvents">
        <item>Phoniex</item>
    </string-array>

    <!-- robotics events -->
    <string-array name="rbEvents">
        <item>RoboWar</item>
        <item>RoboCalypse</item>
    </string-array>

    <!-- name of people in contact list -->
    <string-array name="pNames">
        <item>T1111</item>
        <item>T2222</item>
        <item>C111</item>
        <item>C222</item>
        <item>Web-master</item>
    </string-array>

    <!-- contact numbers of people in contact list -->
    <string-array name="pNumbers">
        <item>4292934241</item>
        <item>1234567890</item>
        <item>2345678901</item>
        <item>3456789012</item>
        <item>4567890123</item>
    </string-array>
    <string-array name="category">
        <item>TEAM</item>
        <item>CREDITS</item>
        <item>QUERY US</item>
    </string-array>
    <string-array name="description">
        <item>Team Details </item>
        <item>Credits </item>
        <item>for more information query us here</item>
    </string-array>

    <!-- photos of people in contact list -->
    <string-array name="pIcons">
        <item>@drawable/events</item>
        <item>@drawable/schedule</item>
        <item>@drawable/register</item>
        <item>@drawable/contact</item>
        <item>@drawable/navigation</item>
    </string-array>

    <!-- the array of questions in the faq list -->
    <string-array name="questions">
        <item>What is your favourite websites?If you have any that is</item>
        <item>What is this if not demo question with the id 1234567 ?</item>
        <item>What is this if not demo question with the id 6712345 ?</item>
        <item>What is this if not demo question with the id 5671234 ?</item>
        <item>What is this if not demo question with the id 4567123 ?</item>
        <item>What is this if not demo question with the id 3456712 ?</item>
        <item>What is this if not demo question with the id 2345671 ?</item>
        <item>What is this if not demo question with the id 7654321 ?</item>
    </string-array>

    <!-- the array of the answers in the faq list -->
    <string-array name="answers">
        <item>My favourite website now that is a very trciky question. I would say presently its quora though I greatly regret not using reddit</item>
        <item>What is this if not demo answer with the id 1234567. </item>
        <item>What is this if not demo answer with the id 6712345.</item>
        <item>What is this if not demo answer with the id 5671234.</item>
        <item>What is this if not demo answer with the id 4567123.</item>
        <item>What is this if not demo answer with the id 3456712.</item>
        <item>What is this if not demo answer with the id 2345671.</item>
        <item>What is this if not demo answer with the id 7654321.</item>
    </string-array>

    <!-- array to store the timings -->
    <string-array name="timings">
        <item>10:00am - 12:00pm</item>
        <item>10:45am - 12:00pm</item>
        <item>11:00am - 12:00pm</item>
        <item>11:30am - 01:00pm</item>
        <item>12:00pm - 02:00pm</item>
        <item>01:00pm - 03:00pm</item>
    </string-array>

    <!-- array to store the event names -->
    <string-array name="schedule_events">
        <item>Brackets</item>
        <item>Code Conundrum</item>
        <item>Goel aur Chotu Ka Game</item>
        <item>PhotoWeb</item>
        <item>Reiches</item>
        <item>Crack The Hack</item>
    </string-array>

    <!-- array to store the event images -->
    <array name="eventImages">
        <item>@drawable/events</item>
        <item>@drawable/schedule</item>
        <item>@drawable/register</item>
        <item>@drawable/contact</item>
        <item>@drawable/navigation</item>
        <item>@drawable/faq</item>
    </array>

    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="chiefOrganizer">Chief Organizer</string>
    <string name="convenors">Convenors</string>
    <string name="vkparashar">Prof.V.K.Parashar</string>
    <string name="vkparasharDetails">Wing Commander (Retd.)</string>
    <string name="pkshardaDetails">Wing Commander (Retd.)</string>
    <string name="sharda">Prof.P.K.Sharda</string>
    <string name="ashwin">Ashwin Dubey</string>
    <string name="ashwinPhone">8585980505</string>
    <string name="meenali">Meenali Saxena</string>
    <string name="shalabh">Shalabh Tyagi</string>
    <string name="shalabhPhone">9999736616</string>
    <string name="prachi">Prachi Bhambani</string>
    <string name="DeveloperTeam">Developer Team</string>

</resources>