<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="#E9E9E8"
    android:gravity="left"
    android:orientation="vertical"
    android:padding="10dip" >

    <EditText
        android:id="@+id/emailText"
        style="@style/editt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="15dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/queryText"
        style="@style/editt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="15dp"
        android:hint="@string/query"
        android:inputType="text"
        android:text="" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:text="@string/queryText"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/radioQuery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp" >

        <RadioButton
            android:id="@+id/radioApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:tag="1"
            android:text="@string/queryWeb" />

        <RadioButton
            android:id="@+id/radioOnline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="2"
            android:text="@string/queryOnline" />

        <RadioButton
            android:id="@+id/radioOnsite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:tag="3"
            android:text="@string/queryOnsite" />

        <RadioButton
            android:id="@+id/radioOther"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="4"
            android:text="@string/queryOther" />
    </RadioGroup>

    <Button
        android:id="@+id/queryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="#42B4E6"
        android:text="@string/submit"
        android:textColor="#ffffff" />

</LinearLayout>